# TestTaskJuly2024

./: CMakeLists.txt  HAV_environment_fin.py  README.md  datamanager.cpp  datamanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  transportinfo.cpp  transportinfo.h
